--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -19,6 +19,8 @@ jobs:
         with:
           java-version: 17
           distribution: corretto
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
       - name: Build with Gradle
         run: gradlew build
       - name: Upload a Build Artifact
