--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,17 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx2G
+org.gradle.jvmargs=-Xmx1G
+org.gradle.parallel=true
 
 # Fabric Properties
-	# check these on https://modmuss50.me/fabric.html
-	minecraft_version=1.20.1
-	yarn_mappings=1.20.1+build.10
-	loader_version=0.14.22
+# check these on https://fabricmc.net/develop
+minecraft_version=1.20.1
+yarn_mappings=1.20.1+build.10
+loader_version=0.15.3
 
 # Mod Properties
-	mod_version = 2.0.0
-	maven_group = me.earth
-	archives_base_name = earthhack-fabric
+mod_version=2.0.0
+maven_group=me.earth
+archives_base_name=earthhack-fabric
 
 # Dependencies
-	# check this on https://modmuss50.me/fabric.html
-	fabric_version=0.90.4+1.20.1
+fabric_version=0.91.0+1.20.1
