--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -27,7 +27,7 @@ jobs:
         run: ./gradlew build
 
       - name: Delete the sources jar
-        run: rm *-sources.jar
+        run: rm ./build/libs/*-sources.jar
 
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v4
