[Fabric] Update to 1.20.4

--- a/.gitignore
+++ b/.gitignore
@@ -23,10 +23,10 @@ eclipse
 run
 *.bak
 
-# Files from Forge MDK
-forge*changelog.txt
-
 # version files
 /HeadlessMC/
 /logs/
 /plugins/
+
+# fabric
+/remappedSrc/
