--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,12 @@
-# Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+# Done to increase the memory available to Gradle.
+org.gradle.jvmargs=-Xmx8G
 org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
 minecraft_version=1.20.4
 yarn_mappings=1.20.4+build.3
-loader_version=0.15.6
+loader_version=0.15.7
 
 # Mod Properties
 mod_version=2.0.0
@@ -14,4 +14,4 @@ maven_group=me.earth
 archives_base_name=earthhack-fabric
 
 # Dependencies
-fabric_version=0.96.1+1.20.4
+fabric_version=0.96.11+1.20.4
