[Fabric] jitpack.yml update

--- a/build.gradle
+++ b/build.gradle
@@ -86,3 +86,11 @@ jar {
         )
     }
 }
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+        }
+    }
+}
